<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HitungMineral"
    android:background="@drawable/bghead"
    android:padding="3dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="Hitung Kadar Mineral"
        android:textSize="25sp"
        android:textStyle="bold"></TextView>


    <RelativeLayout
        android:layout_width="375dp"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/datamineral"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/jumlahbbmineral"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="25dp"
            android:inputType="numberDecimal"
            android:hint="@string/BeratBadan" />
        <EditText
            android:id="@+id/kadar"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="25dp"
            android:hint="kadar"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/btnhitung"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="190dp"
            android:layout_marginLeft="80dp"
            android:text="@string/hitung"
            android:textColor="@color/black"
            android:gravity="center_horizontal">
        </Button>

        <TextView
            android:id="@+id/hasilmineral"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:text="@string/hasil"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="330dp" />
    </RelativeLayout>
</LinearLayout>