<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    tools:context=".Konsultasi">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@id/img_item_photo">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_name"
                    android:text="@string/nma"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/btn_call"
                        android:drawableRight="@drawable/ic_call"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:text="@string/call"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/btn_message"
                        android:drawableRight="@drawable/ic_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:text="@string/pesan"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>